<resources>
    <string name="app_name">ShareForAll</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email_input">Not a valid email</string>
    <string name="invalid_password">Password must be >10 characters</string>
    <string name="invalid_profile">invalid_profile</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Register</string>
    <string name="action_forgot">Forgot</string>
    <string name="title">ShareForAll</string>
    <!-- Strings related to register -->
    <string name="next">next</string>
    <string name="prev">prev</string>
    <string name="cancel">cancel</string>
    <string name="nickname">nickname</string>
    <string name="email">Pipa_cat98@konkuk.ac.kr</string>
    <string name="passwords">************</string>
    <string name="put_nickname">Enter your nickname</string>
    <string name="put_email">Enter your email (Currently using)</string>
    <string name="put_passwords">Enter your passwords (more than 10 letters)</string>
    <string name="put_passwords_again">Enter your passwords (2nd)</string>
    <string name="invalid_nickname">nickname must be >5 characters</string>
    <string name="invalid_email">Not a valid email format</string>
    <string name="discord_passwords">Passwords do not match</string>
    <string name="invalid_phoneNumber">Not a valid phone number</string>
    <string name="unselected1">Please select </string>
    <string name="unselected2">your age</string>
    <string name="precaution1">
        (Some precautions)\n
        1. blah blah\n
        2. hah hah</string>
    <string name="put_phone_number">Enter your phone number</string>
    <string name="phone_number">XXX-XXXX-XXXX</string>
    <string name="put_age">Is it okay to ask your age?</string>
    <string name="elderly">Elderly</string>
    <string name="young">Young</string>
    <string name="precaution2">
        (Second precautions)\n
        1. blah blah\n
        2. hah hah</string>
    <string name="register_complete">register complete</string>
    <!-- Strings related to find-->
    <string name="send">send</string>
    <string name="put_email_to_find">
        Enter your email (used in registration)</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
</resources>