<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterForm">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/nickname_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/put_nickname" />

            <EditText
                android:id="@+id/nickname_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nickname"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nickname_container">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/put_email" />

            <EditText
                android:id="@+id/email_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_container">

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/put_passwords" />

            <EditText
                android:id="@+id/password_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/passwords"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password2_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_container">

            <TextView
                android:id="@+id/password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/put_passwords_again" />

            <EditText
                android:id="@+id/password2_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/passwords"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/precaution1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="32dp"
            android:text="@string/precaution1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password2_container" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>