<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="#64BEA0"
    tools:context=".ui.register.RegisterForm2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/comments_container"
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/phone_number_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:fontFamily="@font/dxganlgrum"
                android:textColor="#FFFFFF"
                android:text="@string/put_phone_number" />

            <EditText
                android:id="@+id/phone_number_form"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="numberDecimal"
                android:fontFamily="@font/dxganlgrum"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/age_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/dxganlgrum"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_container">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:fontFamily="@font/dxganlgrum"
                android:textColor="#FFFFFF"
                android:text="@string/put_age" />

            <RadioGroup
                android:id="@+id/age_group"
                android:background="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/elderlyButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dxganlgrum"
                    android:text="@string/elderly" />

                <RadioButton
                    android:id="@+id/youngButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dxganlgrum"
                    android:text="@string/young" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/precaution2"
            android:layout_width="370dp"
            android:layout_height="79dp"
            android:text="@string/precaution2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#339966"
            android:fontFamily="@font/dxganlgrum"
            app:layout_constraintTop_toBottomOf="@+id/register_select"
            android:textColor="#FFFFFF"
            app:layout_constraintVertical_bias="0.212" />

        <ImageView
            android:id="@+id/register_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age_container"
            tools:src="@drawable/siva" />

        <Button
            android:id="@+id/register_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/dxganlgrum"
            android:text="select image"
            app:backgroundTint="#339966"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_profile" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>